Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/DuplicateImpl.ru
/? Descripción: caso de prueba que verifica que un struct no tenga dos impl
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 6 | YA EXISTE IMPL DE ESTA CLASE

struct Hola{}
impl Hola{
.(){}}
impl Hola{
.(){}}
start{}